# typst-hugo

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.zh_CN.md  dist-workspace.toml
.github/workflows/: build.yml  release.yml
src/: compile.rs  compile.rs~  lib.rs  lib.rs~  main.rs  main.rs~  project.rs~
template/: hugo_template.typ
themes/: index.hbs
themes/darkmode_callback/: blowfish.hbs  meme.hbs
