[package]
name = "typst-hugo"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
reflexo-typst = { version = "0.5.4" }
reflexo-vec2svg = { version ="0.5.4", features = ["experimental-ligature"] }
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = "1.42.0"
log = "0.4.22"
env_logger = "0.11.6"
[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }
