[package]
name = "typst-hugo"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/wenbin-liu/typst-hugo"

[[bin]]
name = "typst-hugo"
path = "src/main.rs"

[dependencies]
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
reflexo-typst = { version = "0.5.4" }
reflexo-vec2svg = { version ="0.5.4", features = ["experimental-ligature"] }
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = "1.42.0"
log = "0.4.22"
env_logger = "0.11.6"
serde_json = "1.0.134"
handlebars = "6.3.0"
chrono = "0.4.39"
warp = { version = "0.3", features = ["compression"] }
serde = "1.0.217"
serde_with = "3.12.0"
unicode-segmentation = "1.12.0"
[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

